[project]
name = "script-job-new"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "nats-py",
    "httpx[http2]",
    "clickhouse-driver",
    "PyYAML",
    "python-jose[cryptography]",
    "python-multipart",
    "pydantic"
]


[project.scripts]
run-all = "project.launcher:main"
module_data_collector = "project.nats_corn.main:main"
module_ch_api_gateway = "project.script_ch_client.main:main"
module_ch_loader = "project.script_ch_writer.main:main"
