[project]
name = "script-job-new"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "nats-py",
    "httpx[http2]",
    "clickhouse-driver",
    "PyYAML",
    "python-jose[cryptography]",
    "python-multipart",
    "pydantic",
    "asyncpg",
    "passlib[bcrypt]",
    "bcrypt>=4.0.0,<4.1",
    "geoip2",
    "ijson",
]


[project.scripts]
run-all = "project.launcher:main"
module_data_collector = "project.module_data_collector.main:main"
module_ch_api_gateway = "project.module_ch_api_gateway.main:main"
module_ch_loader = "project.module_ch_loader.main:main"
module_reputation = "project.module_reputation.main:main"
